force-app/main/default/objects/Exchange_Order__c/Exchange_Order__c.object-meta.xml
<CustomObject>
    <description>Sell/Buy orders</description>
    <label>Exchange Order</label>
    <nameField>
        <displayFormat>ORDER-{00000}</displayFormat>
        <label>Exchange Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exchange Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>