force-app/main/default/objects/Exchange_Order__c/fields/Order_Side__c.field-meta.xml
<CustomField>
    <fullName>Order_Side__c</fullName>
    <description>Represents either a bid (buy) or an ask (sell) order</description>
    <inlineHelpText>Represents either a bid (buy) or an ask (sell) order</inlineHelpText>
    <label>Order Side</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buy</fullName>
            </value>
            <value>
                <fullName>Sell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>