force-app/main/default/objects/Exchange_Order__c/fields/Order_Total__c.field-meta.xml
<CustomField>
    <fullName>Order_Total__c</fullName>
    <description>the total amount paid/received for filled orders and for non-filled orders this will be 0.</description>
    <formula>IF(ISPICKVAL(Status__c, &quot;Filled&quot;) ,  Quantity__c *  Price__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>the total amount paid/received for filled orders and for non-filled orders this will be 0.</inlineHelpText>
    <label>Order Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>