force-app/main/default/objects/Exchange_Order__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Bid or ask price, only relevant for limit orders.</description>
    <inlineHelpText>Bid or ask price, only relevant for limit orders.</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>