force-app/main/default/objects/Exchange_Order__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Represents the number of securities ordered (sell/buy)</description>
    <inlineHelpText>Represents the number of securities ordered (sell/buy)</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>