force-app/main/default/objects/Exchange_Order__c/fields/Time_in_Force__c.field-meta.xml
<CustomField>
    <fullName>Time_in_Force__c</fullName>
    <description>Specifies the type and time till the limit order is valid.</description>
    <inlineHelpText>Specifies the type and time till the limit order is valid.</inlineHelpText>
    <label>Time in Force</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>GTC (Good Till Cancel)</fullName>
            </value>
            <value>
                <fullName>FoK (Fill or Kill)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>