force-app/main/default/objects/Exchange_Order__c/validationRules/Price_is_required_for_limit_orders.validationRule-meta.xml
<ValidationRule>
    <fullName>Price_is_required_for_limit_orders</fullName>
    <active>true</active>
    <description>Price is required for limit orders</description>
    <errorConditionFormula>IF( AND( ISPICKVAL( Order_Type__c , &apos;Limit&apos;) , ISBLANK( Price__c )) , true, false)</errorConditionFormula>
    <errorMessage>Price is required for limit orders</errorMessage>
</ValidationRule>